--- a/_cdn/css/app.css
+++ b/_cdn/css/app.css
@@ -2398,4 +2398,26 @@
   font-size: 0.875em;
 }
 
+.main_slide {
+  background-image: url("../../assets/images/front1.jpg");
+  background-position: center 65%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 532px;
+}
+.main_slide .container {
+  height: 100%;
+}
+.main_slide .container .row {
+  height: 100%;
+}
+.main_slide .container .row .col-8 .main_slide_content {
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.8);
+  text-transform: uppercase;
+  font-size: 2.5em;
+  font-weight: 100;
+  color: #f5f5f5;
+}
+
 /*# sourceMappingURL=app.css.map */
