[Home] dobra experiências

--- a/_cdn/css/app.css
+++ b/_cdn/css/app.css
@@ -2817,4 +2817,29 @@ select.selectpicker {
   color: #f5f5f5;
 }
 
+.main_list_group .main_list_group_items .main_list_group_items_item {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.main_list_group .main_list_group_items .main_list_group_items_item a {
+  flex-basis: 100%;
+  min-height: 200px;
+  color: #f5f5f5;
+  font-size: 1.2em;
+  transition: 0.2s;
+}
+.main_list_group .main_list_group_items .main_list_group_items_item a:hover {
+  text-decoration: none;
+  font-size: 1.3em;
+}
+.main_list_group .main_list_group_items .main_list_group_items_item a div {
+  flex-basis: 100%;
+  min-height: 200px;
+}
+.main_list_group .main_list_group_items .main_list_group_items_item a div h2 {
+  color: #f5f5f5;
+  font-size: 1.2em;
+}
+
 /*# sourceMappingURL=app.css.map */
