--- a/_cdn/scss/pages/_home.scss
+++ b/_cdn/scss/pages/_home.scss
@@ -25,3 +25,36 @@
     }
   }
 }
+
+.main_list_group {
+  .main_list_group_items {
+    .main_list_group_items_item {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      a {
+        flex-basis: 100%;
+        min-height: 200px;
+        color: #f5f5f5;
+        font-size: 1.2em;
+        transition: 0.2s;
+
+        &:hover {
+          text-decoration: none;
+          font-size: 1.3em;
+        }
+
+        div {
+          flex-basis: 100%;
+          min-height: 200px;
+
+          h2 {
+            color: #f5f5f5;
+            font-size: 1.2em;
+          }
+        }
+      }
+    }
+  }
+}
