[Home] dobra listagem

--- a/_cdn/css/app.css
+++ b/_cdn/css/app.css
@@ -2842,4 +2842,37 @@ select.selectpicker {
   font-size: 1.2em;
 }
 
+.img-responsive-16by9 {
+  display: block;
+  height: 0;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+}
+
+.main_properties .main_properties_item h2 {
+  font-size: 1.4em;
+  margin-top: 10px;
+}
+.main_properties .main_properties_item h2 a:hover {
+  text-decoration: none;
+}
+.main_properties .main_properties_item .main_properties_item_category {
+  margin-bottom: 0;
+}
+.main_properties .main_properties_item .main_properties_item_type {
+  font-size: 0.875em;
+  color: #666;
+}
+.main_properties .main_properties_item .main_properties_item_price {
+  font-size: 1.6em;
+  font-weight: bold;
+}
+.main_properties .main_properties_item .main_properties_item_feature img {
+  max-width: 40px;
+}
+.main_properties .main_properties_item .main_properties_item_feature p {
+  font-size: 0.875em;
+  margin: 6px 0 0 0;
+}
+
 /*# sourceMappingURL=app.css.map */
