--- a/_cdn/css/app.css
+++ b/_cdn/css/app.css
@@ -2875,4 +2875,29 @@ select.selectpicker {
   margin: 6px 0 0 0;
 }
 
+.main_optin {
+  text-align: center;
+}
+.main_optin h2 {
+  display: block;
+  text-align: center;
+  font-size: 1.8em;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+.main_optin p {
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+.main_optin form {
+  max-width: 600px;
+  margin: 0 auto;
+}
+.main_optin form input {
+  margin-bottom: 10px;
+}
+.main_optin form button {
+  width: 100%;
+}
+
 /*# sourceMappingURL=app.css.map */
