--- a/_cdn/scss/app.scss
+++ b/_cdn/scss/app.scss
@@ -8,6 +8,7 @@
 @import "theme/footer";
 
 @import "pages/home";
+@import "pages/contact";
 
 @import "fold/list-properties";
 @import "fold/optin";
