--- a/_cdn/scss/app.scss
+++ b/_cdn/scss/app.scss
@@ -9,6 +9,7 @@
 
 @import "pages/home";
 @import "pages/contact";
+@import "pages/property";
 
 @import "fold/list-properties";
 @import "fold/optin";
